--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+* {
+    color: rgb(255, 0, 0);
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
